--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^5.1.1",
     "web-vitals": "^1.0.1"
   },
-"scripts": {
-  "start": "run-p start:dev start:api",
-  "start:dev": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
-  "prestart:api": "node tools/createMockDb.js",
-  "start:api": "node tools/apiServer.js",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "storybook": "start-storybook -p 6006 -s public",
-  "build-storybook": "build-storybook -s public"
-},
+  "scripts": {
+    "start": "run-p start:dev start:api",
+    "start:dev": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
